--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@
 	font-family: museo, serif;
 	font-weight: 900;
 	font-size: 45px;
-
+	display: inline-block;  padding: 20px 20px; border: 1px; margin: 20px;
 }
 
 body{
 	font-family: museo, serif;
 	font-weight: 300;
 	font-size: 20px;
-
+	display: inline-block;  padding: 20px 20px; border: 10px; margin: 20px;
 }
 
 
