interview updates + in class picture assignment

--- a/exercises/pictures/pictures.css
+++ b/exercises/pictures/pictures.css
@@ -1,1 +1,69 @@
 html {background-color: #33AB5F}
+
+
+#butterflies {
+width: 100px;
+height: 100 px;
+}
+
+#pillows {
+width: 100px;
+height: 100 px;	
+}
+
+#ledlights {
+width: 100px;
+height: 100 px;	
+}
+
+#window {
+width: 100px;
+height: 100 px;	
+}
+
+#artsupplies {
+width: 100px;
+height: 100 px;	
+}
+
+#paper {
+width: 100px;
+height: 100 px;	
+}
+
+#pennant {
+width: 100px;
+height: 100 px;	
+}
+
+#corkboard {
+width: 100px;
+height: 100 px;	
+}
+
+#closet {
+width: 100px;
+height: 100 px;	
+}
+
+#pile2 {
+width: 100px;
+height: 100 px;	
+}
+
+#pile1 {
+width: 100px;
+height: 100 px;	
+}
+
+#bed {
+width: 100px;
+height: 100 px;	
+}
+
+#floor {
+width: 100px;
+height: 100 px;	
+}
+
+
