--- a/projects/interview/css/q2.css
+++ b/projects/interview/css/q2.css
@@ -84,7 +84,7 @@
   width: 456px;
 }
 
-.q2 .untitled-design-2 {
+.q2 .bluecakedoodle {
   height: 379px;
   left: 250px;
   object-fit: cover;
@@ -93,7 +93,7 @@
   width: 368px;
 }
 
-.q2 .untitled-design-1 {
+.q2 .bluestars {
   height: 204px;
   left: 40px;
   object-fit: cover;
@@ -151,7 +151,7 @@
   width: 579px;
 }
 
-.q2 .ps_elif-sahin_77894_ {
+.q2 .bluebow {
   height: 312px;
   left: 237px;
   object-fit: cover;
@@ -160,7 +160,7 @@
   width: 375px;
 }
 
-.q2 .blue-icing-cupcake-1 {
+.q2 .bluecupcake {
   height: 327px;
   left: 177px;
   object-fit: cover;
@@ -169,7 +169,7 @@
   width: 324px;
 }
 
-.q2 .x586ab2641fdce414493f5110-1 {
+.q2 .bluemacaron {
   height: 225px;
   left: 367px;
   object-fit: cover;
@@ -178,7 +178,7 @@
   width: 220px;
 }
 
-.q2 .untitled-design {
+.q2 .blueasterisk {
   height: 127px;
   left: 96px;
   object-fit: cover;
