--- a/projects/interview/css/q4.css
+++ b/projects/interview/css/q4.css
@@ -17,7 +17,7 @@
   width: 1543px;
 }
 
-.q4 .x3 {
+.q4 .greenbranch {
   height: 1429px;
   left: 0;
   object-fit: cover;
@@ -28,6 +28,7 @@
 
 .q4 .component-4 {
   align-items: center;
+  cursor: pointer;
   display: flex;
   height: 50px;
   left: 75px;
@@ -110,7 +111,7 @@
   width: 579px;
 }
 
-.q4 .x1 {
+.q4 .greentape1 {
   height: 124px;
   left: 126px;
   object-fit: cover;
@@ -145,7 +146,7 @@
   width: 579px;
 }
 
-.q4 .x2 {
+.q4 .greentape2 {
   height: 197px;
   left: 0;
   object-fit: cover;
@@ -154,20 +155,11 @@
   width: 286px;
 }
 
-.q4 .x3-1 {
+.q4 .greentape3 {
   height: 197px;
   left: 523px;
   object-fit: cover;
   position: absolute;
   top: 254px;
   width: 286px;
-}
-
-.q4 .x4 {
-  height: 558px;
-  left: 1036px;
-  object-fit: cover;
-  position: absolute;
-  top: 659px;
-  width: 462px;
 }
