--- a/projects/interview/css/q9.css
+++ b/projects/interview/css/q9.css
@@ -35,6 +35,7 @@
 
 .q9 .component-9 {
   align-items: flex-end;
+  cursor: pointer;
   display: flex;
   height: 49px;
   left: 0;
@@ -90,7 +91,7 @@
   width: 579px;
 }
 
-.q9 .x1 {
+.q9 .greentapeq9 {
   height: 149px;
   left: 0;
   object-fit: cover;
@@ -136,7 +137,7 @@
   width: 579px;
 }
 
-.q9 .x5 {
+.q9 .greenflower {
   height: 342px;
   left: 205px;
   object-fit: cover;
@@ -173,7 +174,7 @@
   width: 550px;
 }
 
-.q9 .x2 {
+.q9 .brightgreentape {
   height: 109px;
   left: 185px;
   object-fit: cover;
